--- a/about-us.html
+++ b/about-us.html
@@ -66,7 +66,7 @@
                     <ul class="dropdown">
                         <li><a href="./room-details.html">Room Details</a></li>
                         <li><a href="./blog-details.html">Blog Details</a></li>
-                        <li><a href="#">Family Room</a></li>
+                        <li><a href="#">my Family Room</a></li>
                         <li><a href="#">Premium Room</a></li>
                     </ul>
                 </li>
