--- a/about-us.html
+++ b/about-us.html
@@ -67,7 +67,7 @@
                         <li><a href="./room-details.html">Room Details</a></li>
                         <li><a href="./blog-details.html">Blog Details</a></li>
                         <li><a href="#">my Family Room</a></li>
-                        <li><a href="#">Premium Room</a></li>
+                        <li><a href="#">my Premium Room</a></li>
                     </ul>
                 </li>
                 <li><a href="./blog.html">News</a></li>
