--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Sona, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sona | Atriya Template Master Branch 1 rebase confilict</title>
+    <title>Sona | Atriya Template Master Branch 1 rebase confilict master</title>
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap" rel="stylesheet">
@@ -169,7 +169,7 @@
                         <h1>Sona A Luxury Hotel</h1>
                         <p>Here are the best hotel booking sites, including recommendations for international
                             travel and for finding low-priced hotel rooms.</p>
-                        <a href="#" class="primary-btn">Discover Now</a>
+                        <a href="#" class="primary-btn">Discover Now rebase confilict master</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-5 offset-xl-2 offset-lg-1">
@@ -196,7 +196,7 @@
                             <div class="select-option">
                                 <label for="room">Room:</label>
                                 <select id="room">
-                                    <option value="">1 Room</option>
+                                    <option value="">1 Room rebase confilict master</option>
                                     <option value="">2 Room</option>
                                 </select>
                             </div>
